--- a/publications.html
+++ b/publications.html
@@ -31,18 +31,7 @@ scholar profile</a>.
 
 
 
-  
-<div class=publication>
-  Arjun D. Desai, Francesco Caliva, Claudia Iriondo, Naji Khosravan,
-Aliasghar Mortazi, Sachin Jambawalikar, Drew Torigian, Jutta Ellerman,
-Mehmet Akcakaya, Ulas Bagci, Radhika Tibrewala, Io Flament, Matthew
-O'Brien, Sharmila Majumdar, Mathias Perslev, Akshay Pai, Christian
-Igel, Erik B. Dam, Sibaji Gaj, Mingrui Yang, Kunio Nakamura, Xiaojuan
-Li, Cem M. Deniz, Vladimir Juras, Ravinder Regatte, Garry E. Gold, Brian
-  A Hargreaves, Valentina Pedoia, and Akshay S. Chaudhari.
-  <a href="https://arxiv.org/abs/2004.14003">The International Workshop on Osteoarthritis Imaging Knee MRI Segmentation Challenge: A Multi-Institute Evaluation and Analysis Framework on a Standardized Dataset</a>.
-<em>Radiology: Artificial Intelligence</em>, in press
-</div>
+
 
 <div class=publication>
 Lasse Borgholt, Tycho M. S. Tax, Jakob D. Havtorn, Lars Maaløe,
@@ -56,6 +45,19 @@ Lasse Borgholt, Tycho M. S. Tax, Jakob D. Havtorn, Lars Maaløe,
 <a name="y21"></a>
 
 <h4>2021</h4>
+
+  
+<div class=publication>
+  Arjun D. Desai, Francesco Caliva, Claudia Iriondo, Naji Khosravan,
+Aliasghar Mortazi, Sachin Jambawalikar, Drew Torigian, Jutta Ellerman,
+Mehmet Akcakaya, Ulas Bagci, Radhika Tibrewala, Io Flament, Matthew
+O'Brien, Sharmila Majumdar, Mathias Perslev, Akshay Pai, Christian
+Igel, Erik B. Dam, Sibaji Gaj, Mingrui Yang, Kunio Nakamura, Xiaojuan
+Li, Cem M. Deniz, Vladimir Juras, Ravinder Regatte, Garry E. Gold, Brian
+  A Hargreaves, Valentina Pedoia, and Akshay S. Chaudhari.
+  <a href="https://arxiv.org/abs/2004.14003">The International Workshop on Osteoarthritis Imaging Knee MRI Segmentation Challenge: A Multi-Institute Evaluation and Analysis Framework on a Standardized Dataset</a>.
+<em>Radiology: Artificial Intelligence</em> <vol>3</vol>3:e200078, 2021
+</div>
 
 <div class=publication>Espen Jimenez-Solem, Tonny S. Petersen, Casper Hansen, Christian
   Hansen, Christ/ina Lioma, Christian Igel,
@@ -1548,6 +1550,14 @@ implikationsbasierter Semantik</em>, Diploma thesis, University of Dortmund, Dep
 
 <h3>Abstracts and not strictly peer-reviewed contributions to
 conferences and journals</h3>
+
+<div class=publication>
+Jaime Caballer Revenga, Katerina Trepekli, Stefan Oehmcke, Fabian Gieseke, Christian Igel,Rasmus Jensen, and Thomas
+  Friborg. <a
+  href="https://meetingorganizer.copernicus.org/EGU21/EGU21-15708.html">Prediction
+  of above ground biomass and C-stocks based on UAV-LiDAR,
+  multispectral imagery and machine learning methods</a>.
+  <em>EGU General Assembly</em>, 2021</div>
 
 <div class=publication>
 Arjun D. Desai, Francesco Caliva, Claudia Iriondo, Naji Khosravan,
