--- a/publications.html
+++ b/publications.html
@@ -33,13 +33,6 @@ scholar profile</a>.
 
 
 
-<div class=publication>
-Lasse Borgholt, Tycho M. S. Tax, Jakob D. Havtorn, Lars Maaløe,
-  Christian Igel. On scaling contrastive representations for low
-  resource speech recognition. <em>IEEE International Conference on
-  Acoustics, Speech and Signal Processing (ICASSP)</em>, in press
-</div>
-
 
 
 <a name="y21"></a>
@@ -80,10 +73,17 @@ Christian Igel.
 <em>npj Digital Medicine</em> <vol>4</vol>, 2021
 </div>
 
+<div class=publication>
+Lasse Borgholt, Tycho M. S. Tax, Jakob D. Havtorn, Lars Maaløe,
+  Christian Igel. On scaling contrastive representations for low
+  resource speech recognition. <em>IEEE International Conference on
+  Acoustics, Speech and Signal Processing (ICASSP)</em>, pp. 3885-3889, 2021
+</div>
+
 <div class=publication>Kai Br&uuml;gge, Asja Fischer, and Christian Igel.
    <a href='http://proceedings.mlr.press/v130/brugge21a/brugge21a.pdf'>On the convergence of the Metropolis algorithm with fixed-order updates for multivariate binary probability distributions</a>. <em>International Conference on 
 Artificial Intelligence and Statistics (AISTATS), Proceedings of Machine Learning Research</em>
-   <vol>130</vol>, pages 469-477, 2021
+   <vol>130</vol>, pp. 469-477, 2021
 </div>
 
 
