--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ You can find a short article about the centre
 
 </p>
 
-<p>I am a Fellow of <a href="https://www.journals.elsevier.com/artificial-intelligence/">ELLIS, European Lab for Learning and Intelligent System</a>.</p>
+<p>I am a Fellow of <a href="https://ellis.eu">ELLIS, European Lab for Learning and Intelligent System</a>.</p>
 
 <p>Among others, I serve as an Editor of the <a href="http://www.springer.com/computer/ai/journal/13218">German Journal on Artificial Intelligence (KI)</a>
 and an Associate Editor of the <a
