--- a/publications.html
+++ b/publications.html
@@ -73,6 +73,9 @@ Christian Igel.
 <em>npj Digital Medicine</em> <vol>4</vol>, 2021
 </div>
 
+<div class=publication>Christian Igel. Data, Knowledge, and Computation<em>K&uuml;nstliche Intelligenz</em>,
+ 2021 (editorial)</div>
+  
 <div class=publication>
 Lasse Borgholt, Tycho M. S. Tax, Jakob D. Havtorn, Lars Maaløe,
   Christian Igel. On scaling contrastive representations for low
