--- a/publications.html
+++ b/publications.html
@@ -28,11 +28,11 @@ scholar profile</a>.
 <h3>Contributions to journals, books, and conferences</h3>
 
 <h4>Coming soon</h4><a name="top"></a> 
-
-
-
-
-
+Stephan Sloth Lorenzen, Mads Nielsen, Espen Jimenez-Solem, Tonny
+  Studsgaard Petersen, Anders Perner, Hans-Christian Thorsen-Meyer,
+  Christian Igel, and Martin Sillesen. Using Machine Learing for
+  Predicting Intensive Care Unit Resource Use During the Covid-19
+  Pandemic in Denmark, <em>Scientific Reports</em>, 2021</div>
 
 
 <a name="y21"></a>
@@ -63,6 +63,11 @@ Prediction Models From a Bi-national European Cohort of 5594
   Patients</a>. <em>Scientific Reports</em> <vol>11</vol>, 3246, 2021</div>
 
 <div class=publication>
+Rasmus Kær Jørgensen and  Christian Igel.
+  Machine learning for financial transaction classification across
+  companies using character-level word embeddings of text fields.  <em>Intelligent Systems in Accounting, Finance and Management</em>, 2021</div>
+  
+<div class=publication>
   Mathias Perslev,
   Sune Darkner,
   Lykke Kempfner,
@@ -73,7 +78,8 @@ Christian Igel.
 <em>npj Digital Medicine</em> <vol>4</vol>, 2021
 </div>
 
-<div class=publication>Christian Igel. Data, Knowledge, and Computation<em>K&uuml;nstliche Intelligenz</em>,
+<div class=publication>Christian Igel. Data, Knowledge, and
+ Computation. <em>K&uuml;nstliche Intelligenz</em>,
  2021 (editorial)</div>
   
 <div class=publication>
