--- a/publications.html
+++ b/publications.html
@@ -28,7 +28,7 @@ scholar profile</a>.
 <h3>Contributions to journals, books, and conferences</h3>
 
 <h4>Coming soon</h4><a name="top"></a> 
-Stephan Sloth Lorenzen, Mads Nielsen, Espen Jimenez-Solem, Tonny
+<div class=publication>Stephan Sloth Lorenzen, Mads Nielsen, Espen Jimenez-Solem, Tonny
   Studsgaard Petersen, Anders Perner, Hans-Christian Thorsen-Meyer,
   Christian Igel, and Martin Sillesen. Using Machine Learing for
   Predicting Intensive Care Unit Resource Use During the Covid-19
