--- a/publications.html
+++ b/publications.html
@@ -27,12 +27,6 @@ scholar profile</a>.
 <a name="publications"></a>
 <h3>Contributions to journals, books, and conferences</h3>
 
-<h4>Coming soon</h4><a name="top"></a> 
-<div class=publication>Stephan Sloth Lorenzen, Mads Nielsen, Espen Jimenez-Solem, Tonny
-  Studsgaard Petersen, Anders Perner, Hans-Christian Thorsen-Meyer,
-  Christian Igel, and Martin Sillesen. Using Machine Learing for
-  Predicting Intensive Care Unit Resource Use During the Covid-19
-  Pandemic in Denmark, <em>Scientific Reports</em>, 2021</div>
 
 
 <a name="y21"></a>
@@ -49,7 +43,7 @@ Igel, Erik B. Dam, Sibaji Gaj, Mingrui Yang, Kunio Nakamura, Xiaojuan
 Li, Cem M. Deniz, Vladimir Juras, Ravinder Regatte, Garry E. Gold, Brian
   A Hargreaves, Valentina Pedoia, and Akshay S. Chaudhari.
   <a href="https://arxiv.org/abs/2004.14003">The International Workshop on Osteoarthritis Imaging Knee MRI Segmentation Challenge: A Multi-Institute Evaluation and Analysis Framework on a Standardized Dataset</a>.
-<em>Radiology: Artificial Intelligence</em> <vol>3</vol>3:e200078, 2021
+<em>Radiology: Artificial Intelligence</em> <vol>3</vol>:e200078, 2021
 </div>
 
 <div class=publication>Espen Jimenez-Solem, Tonny S. Petersen, Casper Hansen, Christian
@@ -78,6 +72,14 @@ Christian Igel.
 <em>npj Digital Medicine</em> <vol>4</vol>, 2021
 </div>
 
+<h4>Coming soon</h4><a name="top"></a> 
+<div class=publication>Stephan Sloth Lorenzen, Mads Nielsen, Espen Jimenez-Solem, Tonny
+  Studsgaard Petersen, Anders Perner, Hans-Christian Thorsen-Meyer,
+  Christian Igel, and Martin Sillesen. <a href="https://rdcu.be/cyiDe">Using Machine Learing for
+  Predicting Intensive Care Unit Resource Use During the Covid-19
+  Pandemic in Denmark</a>. <em>Scientific Reports</em> <vol>11</vol>:18959, 2021</div>
+
+  
 <div class=publication>Christian Igel. Data, Knowledge, and
  Computation. <em>K&uuml;nstliche Intelligenz</em>,
  2021 (editorial)</div>
