--- a/publications.html
+++ b/publications.html
@@ -28,6 +28,8 @@ scholar profile</a>.
 <h3>Contributions to journals, books, and conferences</h3>
 
 
+<!-- <h4>Coming soon</h4><a name="top"></a> -->
+  
 
 <a name="y21"></a>
 
@@ -72,7 +74,7 @@ Christian Igel.
 <em>npj Digital Medicine</em> <vol>4</vol>, 2021
 </div>
 
-<h4>Coming soon</h4><a name="top"></a> 
+
 <div class=publication>Stephan Sloth Lorenzen, Mads Nielsen, Espen Jimenez-Solem, Tonny
   Studsgaard Petersen, Anders Perner, Hans-Christian Thorsen-Meyer,
   Christian Igel, and Martin Sillesen. <a href="https://rdcu.be/cyiDe">Using Machine Learing for
