--- a/publications.html
+++ b/publications.html
@@ -28,8 +28,15 @@ scholar profile</a>.
 <h3>Contributions to journals, books, and conferences</h3>
 
 
-<!-- <h4>Coming soon</h4><a name="top"></a> -->
-  
+<h4>Coming soon</h4><a name="top"></a>
+
+
+<div class=publication>
+Yi-Shan Wu, Andrés R. Masegosa, Stephan S. Lorenzen, Christian Igel, and Yevgeny Seldin.
+<a href="https://arxiv.org/abs/2106.13624">Chebyshev-Cantelli PAC-Bayes-Bennett Inequality for the Weighted Majority Vote</a>.
+  <em>Advances in Neural Information Processing Systems
+  (NeurIPS)</em>, 2021
+</div>
 
 <a name="y21"></a>
 
@@ -82,8 +89,8 @@ Christian Igel.
   Pandemic in Denmark</a>. <em>Scientific Reports</em> <vol>11</vol>:18959, 2021</div>
 
   
-<div class=publication>Christian Igel. Data, Knowledge, and
- Computation. <em>K&uuml;nstliche Intelligenz</em>,
+<div class=publication>Christian Igel. <a href="https://rdcu.be/ctTGa">Data, Knowledge, and
+ Computation</a>. <em>K&uuml;nstliche Intelligenz</em>,
  2021 (editorial)</div>
   
 <div class=publication>
