--- a/publications.html
+++ b/publications.html
@@ -95,9 +95,12 @@ Christian Igel.
   
 <div class=publication>
 Lasse Borgholt, Tycho M. S. Tax, Jakob D. Havtorn, Lars Maaløe,
-  Christian Igel. On scaling contrastive representations for low
-  resource speech recognition. <em>IEEE International Conference on
-  Acoustics, Speech and Signal Processing (ICASSP)</em>, pp. 3885-3889, 2021
+  Christian Igel. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9414310">On scaling contrastive representations for low
+  resource speech recognition</a>. <em>IEEE International Conference on
+  Acoustics, Speech and Signal Processing (ICASSP)</em>,
+  pp. 3885-3889, 2021
+  <a href="http://128.84.21.203/abs/2102.00850"
+  class="sup">preprint</a> 
 </div>
 
 <div class=publication>Kai Br&uuml;gge, Asja Fischer, and Christian Igel.
