--- a/publications.html
+++ b/publications.html
@@ -38,6 +38,11 @@ Yi-Shan Wu, Andrés R. Masegosa, Stephan S. Lorenzen, Christian Igel, and Yevgen
   (NeurIPS)</em>, 2021
 </div>
 
+<div class=publication>
+Thorben Hellweg, Stefan Oehmcke, Ankit Kariryaa, Fabian Gieseke, and Christian Igel.
+Ensemble Learning for Semantic Segmentation of Ancient Maya Architectures, 2021
+  </div>
+
 <a name="y21"></a>
 
 <h4>2021</h4>
