Journal of Magnetic Resonance Imaging

--- a/publications.html
+++ b/publications.html
@@ -30,6 +30,17 @@ scholar profile</a>.
 
 <h4>Coming soon</h4><a name="top"></a>
 
+  <div class=publication>
+  Mathias Perslev, Akshay Pai, Christian
+Igel, Erik B. Dam. Cross-Cohort Automatic Knee MRI Segmentation with
+  Multi-Planar U-Nets. <em>Journal of Magnetic Resonance Imaging</em>, accepted
+  </div>
+
+  
+<div class=publication>
+Thorben Hellweg, Stefan Oehmcke, Ankit Kariryaa, Fabian Gieseke, and Christian Igel.
+Ensemble Learning for Semantic Segmentation of Ancient Maya Architectures, 2021
+</div>
 
 <div class=publication>
 Yi-Shan Wu, Andrés R. Masegosa, Stephan S. Lorenzen, Christian Igel, and Yevgeny Seldin.
@@ -38,10 +49,7 @@ Yi-Shan Wu, Andrés R. Masegosa, Stephan S. Lorenzen, Christian Igel, and Yevgen
   (NeurIPS)</em>, 2021
 </div>
 
-<div class=publication>
-Thorben Hellweg, Stefan Oehmcke, Ankit Kariryaa, Fabian Gieseke, and Christian Igel.
-Ensemble Learning for Semantic Segmentation of Ancient Maya Architectures, 2021
-  </div>
+
 
 <a name="y21"></a>
 
