--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@ href="publications.html">full list</a>.
 I also  maintain a <a href="http://scholar.google.dk/citations?user=d-jF4zIAAAAJ">Google
 scholar profile</a>.
 <p>
+<div class=publication>
+Yi-Shan Wu, Andrés R. Masegosa, Stephan S. Lorenzen, Christian Igel, and Yevgeny Seldin.
+<a href="https://arxiv.org/abs/2106.13624">Chebyshev-Cantelli PAC-Bayes-Bennett Inequality for the Weighted Majority Vote</a>.
+  <em>Advances in Neural Information Processing Systems
+  (NeurIPS)</em>, 2021
+</div>
+
+
 
 <div class=publication>Martin Brandt, Compton J. Tucker, Ankit Kariryaa, Kjeld Rasmussen,
   Christin Abel, Jennifer Small, Jerome Chave, Laura Vang Rasmussen,
@@ -119,6 +127,16 @@ scholar profile</a>.
   class="sup">10 remarkable discoveries from 2020</a>
 </div>
 
+<div class=publication>
+  Mathias Perslev,
+  Sune Darkner,
+  Lykke Kempfner,
+  Miki Nikolic,
+Poul Jørgen Jennum, and
+Christian Igel. 
+<a href="https://rdcu.be/ciJT0">U-Sleep: Resilient High-Frequency Sleep Staging</a>.
+<em>npj Digital Medicine</em> <vol>4</vol>, 2021
+</div>
 
 <div class=publication>
 Steffen Czolbe, Oswin Krause, Ingemar Cox, and Christian Igel.
