--- a/publications.html
+++ b/publications.html
@@ -29,11 +29,17 @@ scholar profile</a>.
 
 
 <h4>Coming soon</h4><a name="top"></a>
+Lasse Borgholt, Jakob D. Havtorn, Joakim Edin, Lars
+  Maaløe. An Overview of Unsupervised Representation Learning for
+  Speech. <em>The 2nd Workshop on Self-supervised Learning for Audio
+  and Speech Processing (AAAI-SAS-2022)</em>, accepted
 
+  
   <div class=publication>
-  Mathias Perslev, Akshay Pai, Christian
+  Mathias Perslev, Akshay Pai, Jon Runhaar, Christian
 Igel, Erik B. Dam. Cross-Cohort Automatic Knee MRI Segmentation with
-  Multi-Planar U-Nets. <em>Journal of Magnetic Resonance Imaging</em>, accepted
+  Multi-Planar U-Nets. <em>Journal of Magnetic Resonance Imaging</em>,
+  in press
   </div>
 
   
@@ -42,12 +48,7 @@ Thorben Hellweg, Stefan Oehmcke, Ankit Kariryaa, Fabian Gieseke, and Christian I
 Ensemble Learning for Semantic Segmentation of Ancient Maya Architectures, 2021
 </div>
 
-<div class=publication>
-Yi-Shan Wu, Andrés R. Masegosa, Stephan S. Lorenzen, Christian Igel, and Yevgeny Seldin.
-<a href="https://arxiv.org/abs/2106.13624">Chebyshev-Cantelli PAC-Bayes-Bennett Inequality for the Weighted Majority Vote</a>.
-  <em>Advances in Neural Information Processing Systems
-  (NeurIPS)</em>, 2021
-</div>
+
 
 
 
@@ -81,7 +82,9 @@ Prediction Models From a Bi-national European Cohort of 5594
 <div class=publication>
 Rasmus Kær Jørgensen and  Christian Igel.
   Machine learning for financial transaction classification across
-  companies using character-level word embeddings of text fields.  <em>Intelligent Systems in Accounting, Finance and Management</em>, 2021</div>
+  companies using character-level word embeddings of text fields.
+  <em>Intelligent Systems in Accounting, Finance and Management</em>
+  <vol>28</vol>(3), pages 159-172, 2021</div>
   
 <div class=publication>
   Mathias Perslev,
@@ -122,6 +125,12 @@ Artificial Intelligence and Statistics (AISTATS), Proceedings of Machine Learnin
    <vol>130</vol>, pp. 469-477, 2021
 </div>
 
+<div class=publication>
+Yi-Shan Wu, Andrés R. Masegosa, Stephan S. Lorenzen, Christian Igel, and Yevgeny Seldin.
+<a href="https://arxiv.org/abs/2106.13624">Chebyshev-Cantelli PAC-Bayes-Bennett Inequality for the Weighted Majority Vote</a>.
+  <em>Advances in Neural Information Processing Systems
+  (NeurIPS)</em>, 2021
+</div>
 
 <a name="y20"></a>
   
