--- a/publications.html
+++ b/publications.html
@@ -29,15 +29,15 @@ scholar profile</a>.
 
 
 <h4>Coming soon</h4><a name="top"></a>
-Lasse Borgholt, Jakob D. Havtorn, Joakim Edin, Lars
-  Maaløe. An Overview of Unsupervised Representation Learning for
+ <div class=publication> Lasse Borgholt, Jakob D. Havtorn, Joakim Edin, Lars
+  Maaløe, and Christian Igel. An Overview of Unsupervised Representation Learning for
   Speech. <em>The 2nd Workshop on Self-supervised Learning for Audio
   and Speech Processing (AAAI-SAS-2022)</em>, accepted
-
+</div>
   
   <div class=publication>
   Mathias Perslev, Akshay Pai, Jon Runhaar, Christian
-Igel, Erik B. Dam. Cross-Cohort Automatic Knee MRI Segmentation with
+Igel, and Erik B. Dam. Cross-Cohort Automatic Knee MRI Segmentation with
   Multi-Planar U-Nets. <em>Journal of Magnetic Resonance Imaging</em>,
   in press
   </div>
