--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@ learning at DIKU. Since December 2014 I am a full professor at DIKU.</p>
 <p>I am director of the <a href="http://ai.ku.dk">SCIENCE AI
 Centre</a>.
 You can find a short article about the centre 
-<a href="https://www.nature.com/articles/d42473-020-00421-4">here</a>. 
+<a
+href="https://www.nature.com/articles/d42473-020-00421-4">here</a>. I
+am a co-lead  of the <a href="https://di.ku.dk/ai-centre/">Pioneer
+Centre for Artificial Intelligence</a>, Denmark. 
 
 </p>
 
