--- a/publications.html
+++ b/publications.html
@@ -35,12 +35,6 @@ scholar profile</a>.
   and Speech Processing (AAAI-SAS-2022)</em>, accepted
 </div>
   
-  <div class=publication>
-  Mathias Perslev, Akshay Pai, Jon Runhaar, Christian
-Igel, and Erik B. Dam. Cross-Cohort Automatic Knee MRI Segmentation with
-  Multi-Planar U-Nets. <em>Journal of Magnetic Resonance Imaging</em>,
-  in press
-  </div>
 
   
 <div class=publication>
@@ -85,6 +79,14 @@ Rasmus Kær Jørgensen and  Christian Igel.
   companies using character-level word embeddings of text fields.
   <em>Intelligent Systems in Accounting, Finance and Management</em>
   <vol>28</vol>(3), pages 159-172, 2021</div>
+
+    <div class=publication>
+  Mathias Perslev, Akshay Pai, Jon Runhaar, Christian
+Igel, and Erik B. Dam. <a href="https://doi.org/10.1002/jmri.27978">Cross-Cohort Automatic Knee MRI Segmentation with
+  Multi-Planar U-Nets</a>. <em>Journal of Magnetic Resonance
+  Imaging</em>, 2021
+  </div>
+
   
 <div class=publication>
   Mathias Perslev,
