AIJ open access

--- a/index.html
+++ b/index.html
@@ -76,12 +76,14 @@ Centre for Artificial Intelligence</a>, Denmark.
 
 </p>
 
-<p>I am a Fellow of <a href="https://ellis.eu">ELLIS, European Lab for Learning and Intelligent System</a>.</p>
+<p>I am a Fellow of <a href="https://ellis.eu">ELLIS, European Lab for Learning and Intelligent Systems</a>.</p>
 
 <p>Among others, I serve as an Editor of the <a href="http://www.springer.com/computer/ai/journal/13218">German Journal on Artificial Intelligence (KI)</a>
 and an Associate Editor of the <a
 href="https://www.mitpressjournals.org/loi/evco">Evolutionary
-Computation Journal</a> (ECJ) and the <a href="https://www.journals.elsevier.com/artificial-intelligence/">Artificial Intelligence Journal</a> (AIJ).</p>
+Computation Journal</a> (ECJ) and the <a
+href="https://www.journals.elsevier.com/artificial-intelligence/">Artificial
+Intelligence Journal</a> (AIJ). You can get free access to AIJ  <a href="https://aij.ijcai.org/free-access-to-the-ai-journal/">here.</a></p>
 
 
 <h3>Research Interests</h3>
