--- a/publications.html
+++ b/publications.html
@@ -39,12 +39,15 @@ scholar profile</a>.
   
 <div class=publication>
 Thorben Hellweg, Stefan Oehmcke, Ankit Kariryaa, Fabian Gieseke, and Christian Igel.
-Ensemble Learning for Semantic Segmentation of Ancient Maya Architectures, 2021
+Ensemble Learning for Semantic Segmentation of Ancient Maya Architectures, accepted
 </div>
 
-
-
-
+<div class=publication>
+  Stephan Sloth Lorenzen, Christian Igel, and  Mads Nielsen.
+  Information Bottleneck: Exact Analysis of (Quantized) Neural
+  Networks. <em>International Conference on Learning Representations
+  (ICLR)</em>, accepted
+</div> 
 
 <a name="y21"></a>
 
