--- a/publications.html
+++ b/publications.html
@@ -91,7 +91,8 @@ Igel, and Erik B. Dam. <a href="https://doi.org/10.1002/jmri.27978">Cross-Cohort
   </div>
 
   
-<div class=publication>
+  <div class=publication>
+    <img src="images/USleepHead.png"  align="right" style="margin: 0px 10px 10px 10px" width="100" alt="[U-Sleep]">
   Mathias Perslev,
   Sune Darkner,
   Lykke Kempfner,
@@ -196,6 +197,8 @@ Oswin Krause, Asja Fischer, and Christian Igel.
 
 
 <div class=publication>
+      <img src="images/TandemThumbSmall.png"  align="right"
+      style="margin: 0px 10px 10px 10px" width="100" alt="[Tandem loss]">
  Andrés R. Masegosa, Stephan S. Lorenzen, Christian Igel, and Yevgeny Seldin.
 <a href="https://arxiv.org/abs/2007.13532">Second Order PAC-Bayesian Bounds for the Weighted Majority Vote</a>.
   <em>Advances in Neural Information Processing Systems
