--- a/publications.html
+++ b/publications.html
@@ -92,7 +92,7 @@ Igel, and Erik B. Dam. <a href="https://doi.org/10.1002/jmri.27978">Cross-Cohort
 
   
   <div class=publication>
-    <img src="images/USleepHead.png"  align="right" style="margin: 0px 10px 10px 10px" width="200" alt="[U-Sleep]">
+    <a href="https://sleep.ai.ku.dk"><img src="images/USleepHead.png"  align="right" style="margin: 0px 10px 10px 10px" width="2050" alt="[U-Sleep]"></a>
   Mathias Perslev,
   Sune Darkner,
   Lykke Kempfner,
@@ -197,8 +197,9 @@ Oswin Krause, Asja Fischer, and Christian Igel.
 
 
 <div class=publication>
-      <img src="images/TandemThumbSmall.png"  align="right"
-      style="margin: 0px 10px 10px 10px" width="200" alt="[Tandem loss]">
+      <a href="https://arxiv.org/abs/2007.13532"><img
+      src="images/TandemThumbSmall.png"  align="right" style="vertical-align:bottom"
+      style="margin: 0px 10px 10px 10px" width="200" alt="[Tandem loss]"></a>
  Andrés R. Masegosa, Stephan S. Lorenzen, Christian Igel, and Yevgeny Seldin.
 <a href="https://arxiv.org/abs/2007.13532">Second Order PAC-Bayesian Bounds for the Weighted Majority Vote</a>.
   <em>Advances in Neural Information Processing Systems
