--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Currently, I am particularly interested in
 <li>deep neural networks and stochastic neural networks,
 </li>
 </ul>
-and applications of these methods.
+and applications of these methods helping to achieve the sustainable development goals.
 
 
 <h3>Selected Recent Publications</h3>
