--- a/publications.html
+++ b/publications.html
@@ -67,7 +67,7 @@ Li, Cem M. Deniz, Vladimir Juras, Ravinder Regatte, Garry E. Gold, Brian
 </div>
 
 <div class=publication>Espen Jimenez-Solem, Tonny S. Petersen, Casper Hansen, Christian
-  Hansen, Christ/ina Lioma, Christian Igel,
+  Hansen, Christina Lioma, Christian Igel,
 Wouter Boomsma, Oswin Krause, Stephan Lorenzen,
 Raghavendra Selvan, Janne Petersen, Martin Erik Nyeland, Mikkel Zöllner Ankarfeldt, Gert Mehl Virenfeldt, Matilde WintherJensen, Allan Linneberg, Mostafa Mediphour Ghazi,
 Nicki Detlefsen, Andreas Lauritzen, Abraham George Smith, Marleen de Bruijne, Bulat Ibragimov, Jens Petersen, Martin Lillholm, Jon Middleton, Stine Hasling Mogensen, Hans-Christian Thorsen-Meyer, Anders Perner, Marie Helleberg, Benjamin Skov Kaas-Hansen, Mikkel Bonde, Alexander Bonde,
