--- a/publications.html
+++ b/publications.html
@@ -29,12 +29,7 @@ scholar profile</a>.
 
 
 <h4>Coming soon</h4><a name="top"></a>
- <div class=publication> Lasse Borgholt, Jakob D. Havtorn, Joakim Edin, Lars
-  Maaløe, and Christian Igel. An Overview of Unsupervised Representation Learning for
-  Speech. <em>The 2nd Workshop on Self-supervised Learning for Audio
-  and Speech Processing (AAAI-SAS-2022)</em>, accepted
-</div>
-  
+
 
   
 <div class=publication>
@@ -42,12 +37,33 @@ Thorben Hellweg, Stefan Oehmcke, Ankit Kariryaa, Fabian Gieseke, and Christian I
 Ensemble Learning for Semantic Segmentation of Ancient Maya Architectures, accepted
 </div>
 
+
+<a name="y22"></a>
+
+<h4>2022</h4>
+
+    <div class=publication>
+  Mathias Perslev, Akshay Pai, Jon Runhaar, Christian
+Igel, and Erik B. Dam. <a href="https://doi.org/10.1002/jmri.27978">Cross-Cohort Automatic Knee MRI Segmentation with
+  Multi-Planar U-Nets</a>. <em>Journal of Magnetic Resonance
+  Imaging</em>, 2022
+  </div>
+
+
+  
+ <div class=publication> Lasse Borgholt, Jakob D. Havtorn, Joakim Edin, Lars
+  Maaløe, and Christian Igel. <a href="https://aaai-sas-2022.github.io/static/media/A_Brief_Overview_of_Unsupervised_Neural_Speech_Representation_Learning__AAAI_SAS_.b293cc96.pdf">An Overview of Unsupervised Representation Learning for
+  Speech</a>. <em>The 2nd Workshop on Self-supervised Learning for Audio
+  and Speech Processing (AAAI-SAS-2022)</em>, 2022
+</div>
+
 <div class=publication>
   Stephan Sloth Lorenzen, Christian Igel, and  Mads Nielsen.
-  Information Bottleneck: Exact Analysis of (Quantized) Neural
-  Networks. <em>International Conference on Learning Representations
-  (ICLR)</em>, accepted
+  <a href="https://openreview.net/forum?id=kF9DZQQrU0w">Information Bottleneck: Exact Analysis of (Quantized) Neural
+  Networks</a>. <em>International Conference on Learning Representations
+  (ICLR)</em>, 2022
 </div> 
+
 
 <a name="y21"></a>
 
@@ -83,12 +99,6 @@ Rasmus Kær Jørgensen and  Christian Igel.
   <em>Intelligent Systems in Accounting, Finance and Management</em>
   <vol>28</vol>(3), pages 159-172, 2021</div>
 
-    <div class=publication>
-  Mathias Perslev, Akshay Pai, Jon Runhaar, Christian
-Igel, and Erik B. Dam. <a href="https://doi.org/10.1002/jmri.27978">Cross-Cohort Automatic Knee MRI Segmentation with
-  Multi-Planar U-Nets</a>. <em>Journal of Magnetic Resonance
-  Imaging</em>, 2021
-  </div>
 
   
   <div class=publication>
@@ -1606,7 +1616,19 @@ implikationsbasierter Semantik</em>, Diploma thesis, University of Dortmund, Dep
 conferences and journals</h3>
 
 <div class=publication>
-Jaime Caballer Revenga, Katerina Trepekli, Stefan Oehmcke, Fabian Gieseke, Christian Igel,Rasmus Jensen, and Thomas
+Erik B. Dam, Arjun Desai, Cem M. Deniz, H. Rajamohan, Ravinder
+  Regatte, Claudia Iriondo, Valentina Pedoia, Sharmila Majumdar,
+  Mathias Perslev, Christian Igel, Akshay Pai, Sibaji Gaj, Mingrui
+  Yang, Kunio Nakamura, Xiaojuan Li, H. Maqbool, I. Irmakci,
+  S.-E. Song, Ulas Bagci, Brian A. Hargreaves, Garry E. Gold, and
+Akshay S. Chaudhari. Multi-institutional large-scale validation of 8 methods
+for automatic knee MRI segmentation for use in clinical
+trials. <em>Osteoarthritis and Cartilage</em> <vol>30</vol>:S291–S292, 2022.
+</div>
+
+<div class=publication>
+Jaime Caballer Revenga, Katerina Trepekli, Stefan Oehmcke, Fabian
+  Gieseke, Christian Igel, Rasmus Jensen, and Thomas
   Friborg. <a
   href="https://meetingorganizer.copernicus.org/EGU21/EGU21-15708.html">Prediction
   of above ground biomass and C-stocks based on UAV-LiDAR,
@@ -1620,7 +1642,7 @@ Mehmet Akcakaya, Ulas Bagci, Radhika Tibrewala, Io Flament, Matthew
 O'Brien, Sharmila Majumdar, Mathias Perslev, Akshay Pai, Christian
 Igel, Erik B. Dam, Sibaji Gaj, Mingrui Yang, Kunio Nakamura, Xiaojuan
 Li, Cem M. Deniz, Vladimir Juras, Ravinder Regatte, Garry E. Gold, Brian
-  A Hargreaves, Valentina Pedoia, and Akshay S. Chaudhari.
+  A. Hargreaves, Valentina Pedoia, and Akshay S. Chaudhari.
   A multi-institute automated segmentation evaluation on a standard
   dataset: Findings from the international workshop on osteoarthritis
   imaging segmentation challenge. <em>Osteoarthritis and Cartilage</em> <vol>28</vol>, pp. S304–S305, 2020
