--- a/publications.html
+++ b/publications.html
@@ -30,8 +30,20 @@ scholar profile</a>.
 
 <h4>Coming soon</h4><a name="top"></a>
 
+<div class=publication>
+Bobby Lo, ZhuoYuan Liu, Flemming Bendtsen, Christian Igel,  Ida Vind, and Johan Burisch. High Accuracy in Classifying Endoscopic Severity in Ulcerative Colitis Using Convolutional Neural Networks.
+<em>American Journal of Gastroenterology</em>, accepted
+</div>
 
   
+<div class=publication>
+Pengfei Diao, Akshay Pai, Christian Igel, and
+Christian Hedeager Krag.
+Histogram-based unsupervised domain adaptation for medical image classification
+<em>Medical Image Computing and Computer Assisted
+  Intervention (MICCAI)</em>, LNCS <vol></vol>, Springer, in press
+</div>
+
 <div class=publication>
 Thorben Hellweg, Stefan Oehmcke, Ankit Kariryaa, Fabian Gieseke, and Christian Igel.
 Ensemble Learning for Semantic Segmentation of Ancient Maya Architectures, accepted
@@ -52,8 +64,7 @@ Igel, and Erik B. Dam. <a href="https://doi.org/10.1002/jmri.27978">Cross-Cohort
 
   
  <div class=publication> Lasse Borgholt, Jakob D. Havtorn, Joakim Edin, Lars
-  Maaløe, and Christian Igel. <a href="https://aaai-sas-2022.github.io/static/media/A_Brief_Overview_of_Unsupervised_Neural_Speech_Representation_Learning__AAAI_SAS_.b293cc96.pdf">An Overview of Unsupervised Representation Learning for
-  Speech</a>. <em>The 2nd Workshop on Self-supervised Learning for Audio
+  Maaløe, and Christian Igel. <a href="https://aaai-sas-2022.github.io/static/media/A_Brief_Overview_of_Unsupervised_Neural_Speech_Representation_Learning__AAAI_SAS_.b293cc96.pdf">A Brief Overview of Unsupervised Neural Speech Representation Learning</a>. <em>The 2nd Workshop on Self-supervised Learning for Audio
   and Speech Processing (AAAI-SAS-2022)</em>, 2022
 </div>
 
