--- a/publications.html
+++ b/publications.html
@@ -30,10 +30,6 @@ scholar profile</a>.
 
 <h4>Coming soon</h4><a name="top"></a>
 
-<div class=publication>
-Bobby Lo, ZhuoYuan Liu, Flemming Bendtsen, Christian Igel,  Ida Vind, and Johan Burisch. High Accuracy in Classifying Endoscopic Severity in Ulcerative Colitis Using Convolutional Neural Networks.
-<em>American Journal of Gastroenterology</em>, accepted
-</div>
 
   
 <div class=publication>
@@ -53,6 +49,11 @@ Ensemble Learning for Semantic Segmentation of Ancient Maya Architectures, accep
 <a name="y22"></a>
 
 <h4>2022</h4>
+
+<div class=publication>
+	Bobby Lo, ZhuoYuan Liu, Flemming Bendtsen, Christian Igel,  Ida Vind, and Johan Burisch. <a href="https://journals.lww.com/ajg/Abstract/9900/High_accuracy_in_classifying_endoscopic_severity.434.aspx"> High Accuracy in Classifying Endoscopic Severity in Ulcerative Colitis Using Convolutional Neural Networks</a>.
+<em>American Journal of Gastroenterology</em>, 2022
+</div>
 
     <div class=publication>
   Mathias Perslev, Akshay Pai, Jon Runhaar, Christian
