--- a/publications.html
+++ b/publications.html
@@ -30,12 +30,20 @@ scholar profile</a>.
 
 <h4>Coming soon</h4><a name="top"></a>
 
+<div class=publication>
+Jaime Caballer Revenga, Katerina Trepekli, Stefan Oehmcke, Rasmus 
+Jensen, Lei Li, Christian Igel, Fabian Cristian Gieseke, Thomas Friborg.
+Aboveground biomass prediction in croplands at sub-meter resolution 
+based on UAV-LiDAR and machine learning methods.
+<em>Remote Sensing</em>, accepted
+</div>
+
 
   
 <div class=publication>
 Pengfei Diao, Akshay Pai, Christian Igel, and
 Christian Hedeager Krag.
-Histogram-based unsupervised domain adaptation for medical image classification
+Histogram-based unsupervised domain adaptation for medical image classification.
 <em>Medical Image Computing and Computer Assisted
   Intervention (MICCAI)</em>, LNCS <vol></vol>, Springer, in press
 </div>
