--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Professor, Dr. habil.
     </tbody>
   </table>
   <br>
-  <table cellspacing="0" cellpadding="0" nosave="">
+  <table cellspacing="0" cellpadding="0" nosave="" style="padding-right: 1.5em">
     <tbody>
       <tr>
 	<td>Email:</td>
