--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Professor, Dr. habil.
 	<td><a href="index.html#" onclick="this.href= 'mai' + 'lto:' + 'igel' + '&#64;' + 'di.ku.dk' ; return true;">igel<!-- @@@ -->&#64;<!-- @@@ -->diku<!-- nospam -->.<!-- nomorespam -->dk</a></td>
       </tr>
       <tr>
-	      <td>Phone:<br></td>
+	      <td>Phone:&nbsp;</td>
 	<td>(+45) 21849673</td>
       </tr>
       <tr>
