--- a/publications.html
+++ b/publications.html
@@ -30,14 +30,6 @@ scholar profile</a>.
 
 <h4>Coming soon</h4><a name="top"></a>
 
-<div class=publication>
-Jaime Caballer Revenga, Katerina Trepekli, Stefan Oehmcke, Rasmus 
-Jensen, Lei Li, Christian Igel, Fabian Cristian Gieseke, Thomas Friborg.
-Aboveground biomass prediction in croplands at sub-meter resolution 
-based on UAV-LiDAR and machine learning methods.
-<em>Remote Sensing</em>, accepted
-</div>
-
 
   
 <div class=publication>
@@ -48,10 +40,7 @@ Histogram-based unsupervised domain adaptation for medical image classification.
   Intervention (MICCAI)</em>, LNCS <vol></vol>, Springer, in press
 </div>
 
-<div class=publication>
-Thorben Hellweg, Stefan Oehmcke, Ankit Kariryaa, Fabian Gieseke, and Christian Igel.
-Ensemble Learning for Semantic Segmentation of Ancient Maya Architectures, accepted
-</div>
+
 
 
 <a name="y22"></a>
@@ -70,11 +59,28 @@ Igel, and Erik B. Dam. <a href="https://doi.org/10.1002/jmri.27978">Cross-Cohort
   Imaging</em>, 2022
   </div>
 
+<div class=publication>
+Jaime Caballer Revenga, Katerina Trepekli, Stefan Oehmcke, Rasmus 
+Jensen, Lei Li, Christian Igel, Fabian Cristian Gieseke, Thomas Friborg.
+<a href="https://www.mdpi.com/2072-4292/14/16/3912">Aboveground biomass prediction in croplands at sub-meter resolution 
+based on UAV-LiDAR and machine learning methods</a>.
+<em>Remote Sensing</em>, 2022
+</div>
+
 
   
  <div class=publication> Lasse Borgholt, Jakob D. Havtorn, Joakim Edin, Lars
   Maaløe, and Christian Igel. <a href="https://aaai-sas-2022.github.io/static/media/A_Brief_Overview_of_Unsupervised_Neural_Speech_Representation_Learning__AAAI_SAS_.b293cc96.pdf">A Brief Overview of Unsupervised Neural Speech Representation Learning</a>. <em>The 2nd Workshop on Self-supervised Learning for Audio
   and Speech Processing (AAAI-SAS-2022)</em>, 2022
+</div>
+
+<div class=publication>
+Thorben Hellweg, Stefan Oehmcke, Ankit Kariryaa, Fabian Gieseke, and Christian Igel.
+Ensemble Learning for Semantic Segmentation of Ancient Maya
+  Architectures. In D. Kocev, N. Simidjievski, A. Kostovska,
+  I. Dimitrovski, and Žiga Kokalj, editors, Discover the Msteries of
+  the Maya, pp. 13–19. Jožef Stefan Institute, Jamova cesta 39, 1000
+  Ljubljana, Slovenia, 2022
 </div>
 
 <div class=publication>
