--- a/publications.html
+++ b/publications.html
@@ -78,7 +78,7 @@ based on UAV-LiDAR and machine learning methods</a>.
 Thorben Hellweg, Stefan Oehmcke, Ankit Kariryaa, Fabian Gieseke, and Christian Igel.
 Ensemble Learning for Semantic Segmentation of Ancient Maya
   Architectures. In D. Kocev, N. Simidjievski, A. Kostovska,
-  I. Dimitrovski, and Žiga Kokalj, editors, Discover the Msteries of
+  I. Dimitrovski, and Žiga Kokalj, editors, Discover the Mysteries of
   the Maya, pp. 13–19. Jožef Stefan Institute, Jamova cesta 39, 1000
   Ljubljana, Slovenia, 2022
 </div>
