--- a/publications.html
+++ b/publications.html
@@ -64,7 +64,7 @@ Jaime Caballer Revenga, Katerina Trepekli, Stefan Oehmcke, Rasmus
 Jensen, Lei Li, Christian Igel, Fabian Cristian Gieseke, Thomas Friborg.
 <a href="https://www.mdpi.com/2072-4292/14/16/3912">Aboveground biomass prediction in croplands at sub-meter resolution 
 based on UAV-LiDAR and machine learning methods</a>.
-<em>Remote Sensing</em>, 2022
+<em>Remote Sensing</em> <vol>14</vol>16:3912, 2022
 </div>
 
 
@@ -78,8 +78,8 @@ based on UAV-LiDAR and machine learning methods</a>.
 Thorben Hellweg, Stefan Oehmcke, Ankit Kariryaa, Fabian Gieseke, and Christian Igel.
 Ensemble Learning for Semantic Segmentation of Ancient Maya
   Architectures. In D. Kocev, N. Simidjievski, A. Kostovska,
-  I. Dimitrovski, and Žiga Kokalj, editors, Discover the Mysteries of
-  the Maya, pp. 13–19. Jožef Stefan Institute, Jamova cesta 39, 1000
+  I. Dimitrovski, and Žiga Kokalj, eds.: <em>Discover the Mysteries of
+  the Maya</em>, pp. 13–19. Jožef Stefan Institute, Jamova cesta 39, 1000
   Ljubljana, Slovenia, 2022
 </div>
 
