--- a/publications.html
+++ b/publications.html
@@ -40,6 +40,27 @@ Histogram-based unsupervised domain adaptation for medical image classification.
   Intervention (MICCAI)</em>, LNCS <vol></vol>, Springer, in press
 </div>
 
+<div class=publication>Stefan Oehmcke, Lei Li, Jaime Revenga, Thomas
+  Nord-Larsen, Katerina Trepekli, Fabian Gieseke, Christian Igel. Deep Learning Based 3D Point Cloud Regression for Estimating Forest Biomass,
+<em>ACM SIGSPATIAL</em>, accepted
+</div>
+
+<div class=publication>
+Abdelrahman Mohamed, Hung-yi Lee, Lasse Borgholt, Jakob D. Havtorn,
+  Joakim Edin, Christian Igel, Katrin Kirchhoff, Shang-Wen Li, Karen Livescu,
+  Lars Maaløe, Tara N. Sainath, Shinji Watanabe.
+  Self-Supervised Speech Representation Learning: A Review
+<em>IEEE Journal of Selected Topics in Signal Processing</em>, accepted
+</div>
+
+<div class=publication>Constanza Fierro, Laura Cabello Piqueras, Jonas
+  Lotz, Philip Rust, Joen Rommedahl, Jeppe Klok Due, Christian Igel,
+  Desmond Elliott, Carsten Bøcker Pedersen, Israfel Salazar and Anders
+  Søgaard.
+   Date Recognition in Historical Parish Records
+<em>International Conference on Frontiers in Handwriting Recognition
+  (ICFHR)</em>, accepted
+</div>
 
 
 
@@ -64,7 +85,7 @@ Jaime Caballer Revenga, Katerina Trepekli, Stefan Oehmcke, Rasmus
 Jensen, Lei Li, Christian Igel, Fabian Cristian Gieseke, Thomas Friborg.
 <a href="https://www.mdpi.com/2072-4292/14/16/3912">Aboveground biomass prediction in croplands at sub-meter resolution 
 based on UAV-LiDAR and machine learning methods</a>.
-<em>Remote Sensing</em> <vol>14</vol>16:3912, 2022
+<em>Remote Sensing</em> <vol>14</vol>(16):3912, 2022
 </div>
 
 
@@ -1640,6 +1661,13 @@ implikationsbasierter Semantik</em>, Diploma thesis, University of Dortmund, Dep
 
 <h3>Abstracts and not strictly peer-reviewed contributions to
 conferences and journals</h3>
+
+<div class=publication>
+  Bobby Lo, ZhuoYuan Liu, Flemming Bendtsen, Christian Igel,  Ida Vind, and Johan Burisch.
+Artificial intelligence surpasses gastrointestinal experts in the classification of endoscopic severity among Ulcerative Colitis.
+<em>Journal of Crohn's & Colitis</em> <vol>15</vol> Suppl 1, p. S007, 2021
+</div> 
+
 
 <div class=publication>
 Erik B. Dam, Arjun Desai, Cem M. Deniz, H. Rajamohan, Ravinder
