--- a/publications.html
+++ b/publications.html
@@ -31,7 +31,15 @@ scholar profile</a>.
 <h4>Coming soon</h4><a name="top"></a>
 
 
-  
+<div class=publication>
+Abdelrahman Mohamed, Hung-yi Lee, Lasse Borgholt, Jakob D. Havtorn,
+  Joakim Edin, Christian Igel, Katrin Kirchhoff, Shang-Wen Li, Karen Livescu,
+  Lars Maaløe, Tara N. Sainath, Shinji Watanabe.
+  Self-Supervised Speech Representation Learning: A Review.
+<em>IEEE Journal of Selected Topics in Signal Processing</em>, accepted
+</div>
+
+
 <div class=publication>
 Pengfei Diao, Akshay Pai, Christian Igel, and
 Christian Hedeager Krag.
@@ -40,27 +48,22 @@ Histogram-based unsupervised domain adaptation for medical image classification.
   Intervention (MICCAI)</em>, LNCS <vol></vol>, Springer, in press
 </div>
 
-<div class=publication>Stefan Oehmcke, Lei Li, Jaime Revenga, Thomas
-  Nord-Larsen, Katerina Trepekli, Fabian Gieseke, Christian Igel. Deep Learning Based 3D Point Cloud Regression for Estimating Forest Biomass,
-<em>ACM SIGSPATIAL</em>, accepted
-</div>
-
-<div class=publication>
-Abdelrahman Mohamed, Hung-yi Lee, Lasse Borgholt, Jakob D. Havtorn,
-  Joakim Edin, Christian Igel, Katrin Kirchhoff, Shang-Wen Li, Karen Livescu,
-  Lars Maaløe, Tara N. Sainath, Shinji Watanabe.
-  Self-Supervised Speech Representation Learning: A Review
-<em>IEEE Journal of Selected Topics in Signal Processing</em>, accepted
-</div>
-
 <div class=publication>Constanza Fierro, Laura Cabello Piqueras, Jonas
   Lotz, Philip Rust, Joen Rommedahl, Jeppe Klok Due, Christian Igel,
   Desmond Elliott, Carsten Bøcker Pedersen, Israfel Salazar and Anders
   Søgaard.
-   Date Recognition in Historical Parish Records
+   Date Recognition in Historical Parish Records.
 <em>International Conference on Frontiers in Handwriting Recognition
   (ICFHR)</em>, accepted
 </div>
+
+
+<div class=publication>Stefan Oehmcke, Lei Li, Jaime Revenga, Thomas
+  Nord-Larsen, Katerina Trepekli, Fabian Gieseke, Christian Igel. Deep Learning Based 3D Point Cloud Regression for Estimating Forest Biomass.
+<em>ACM SIGSPATIAL</em>, accepted
+</div>
+
+
 
 
 
