--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ learning at DIKU. Since December 2014 I am a full professor at DIKU.</p>
 Centre</a>.
 You can find a short article about the centre 
 <a
-href="https://www.nature.com/articles/d42473-020-00421-4">here</a>. I
-am a co-lead  of the <a href="https://di.ku.dk/ai-centre/">Pioneer
+href="https://www.nature.com/articles/d42473-020-00421-4">here</a>. Furthermore, I
+am a co-lead  of the <a href="https://www.aicentre.dk">Pioneer
 Centre for Artificial Intelligence</a>, Denmark. 
 
 </p>
