--- a/publications.html
+++ b/publications.html
@@ -32,13 +32,13 @@ scholar profile</a>.
 
 
 <div class=publication>
-Abdelrahman Mohamed, Hung-yi Lee, Lasse Borgholt, Jakob D. Havtorn,
-  Joakim Edin, Christian Igel, Katrin Kirchhoff, Shang-Wen Li, Karen Livescu,
-  Lars Maaløe, Tara N. Sainath, Shinji Watanabe.
-  Self-Supervised Speech Representation Learning: A Review.
-<em>IEEE Journal of Selected Topics in Signal Processing</em>, accepted
+Maurice Mugabowindekwe, Martin Brandt, Jerome Chave, Florian Reiner,
+  David Skole, Ankit Kariryaa, Christian Igel, Pierre Hiernaux,
+  Philippe Ciais, Ole Mertz, Xiaoye Tong, Sizhuo Li, Gaspard
+  Rwanyiziri, Thaulin Dushimiyimana, Alain Ndoli, Valens Uwizeyimana,
+  Jens-Peter Lillesø, Fabian Gieseke, Compton Tucker, Sassan
+  S. Saatchi, and  Rasmus Fensholt. Nation-wide mapping of tree level carbon stocks in Rwanda. <em>Nature Climate Change</em>, accepted 
 </div>
-
 
 <div class=publication>
 Pengfei Diao, Akshay Pai, Christian Igel, and
@@ -72,8 +72,16 @@ Histogram-based unsupervised domain adaptation for medical image classification.
 <h4>2022</h4>
 
 <div class=publication>
-	Bobby Lo, ZhuoYuan Liu, Flemming Bendtsen, Christian Igel,  Ida Vind, and Johan Burisch. <a href="https://journals.lww.com/ajg/Abstract/9900/High_accuracy_in_classifying_endoscopic_severity.434.aspx"> High Accuracy in Classifying Endoscopic Severity in Ulcerative Colitis Using Convolutional Neural Networks</a>.
+	Bobby Lo, ZhuoYuan Liu, Flemming Bendtsen, Christian Igel,  Ida Vind, and Johan Burisch. <a href="https://journals.lww.com/ajg/Abstract/9900/High_accuracy_in_classifying_endoscopic_severity.434.aspx">High Accuracy in Classifying Endoscopic Severity in Ulcerative Colitis Using Convolutional Neural Networks</a>.
 <em>American Journal of Gastroenterology</em>, 2022
+</div>
+
+<div class=publication>
+Abdelrahman Mohamed, Hung-yi Lee, Lasse Borgholt, Jakob D. Havtorn,
+  Joakim Edin, Christian Igel, Katrin Kirchhoff, Shang-Wen Li, Karen Livescu,
+  Lars Maaløe, Tara N. Sainath, Shinji Watanabe.
+  Self-Supervised Speech Representation Learning: A Review.
+<em>IEEE Journal of Selected Topics in Signal Processing</em>, <vol>16</vol>(6):1179–1210
 </div>
 
     <div class=publication>
