--- a/usleep.html
+++ b/usleep.html
@@ -38,7 +38,8 @@ clinics and ultimately supports a more precise, early-stage diagnosis
 of diseases, allowing for more
 promising treatments.
 
-<img href='https://dff.dk/@@site-logo-en/dff-logo.png'>
+U-Sleep is funded by the Danish   
+<img src='https://dff.dk/@@site-logo-en/dff-logo.png'>
 
 
 
@@ -50,47 +51,17 @@ promising treatments.
   <h2>Download</h2>
 
 
-  <h2>Multi-Planar UNet</h2>
+  <h3>Multi-Planar UNet</h2>
   Download 
  <a href="https://github.com/perslev/MultiPlanarUNet">Multi-Planar
   UNet</a>, a simple and thoroughly evaluated deep learning Python framework for segmentation of arbitrary medical image volumes. The system requires no task-specific information, no human interaction and is based on a fixed model topology and a fixed hyperparameter set, eliminating the process of model selection and its inherent tendency to cause method-level over-fitting. The system is available in open source and does not require deep learning expertise to use. Without task-specific modifications, the system performed better than or similar to highly specialized deep learning methods across 3 separate segmentation tasks. In addition, it ranked 5-th and 6-th in the first and second round of the 2018 Medical Segmentation Decathlon comprising another 10 tasks. The system relies on multi-planar data augmentation which facilitates the application of a single 2D architecture based on the familiar U-Net. Multi-planar training combines the parameter efficiency of a 2D fully convolutional neural network with a systematic train- and test-time augmentation scheme, which allows the 2D model to learn a representation of the 3D image volume that fosters generalization.
 
-  <h3>Paper describing the package</h3> 
-<div class=publication>
-Mathias Perslev,
-    Erik Dam,
-    Akshay Pai, and
-    Christian Igel.
-<a href="https://arxiv.org/abs/1911.01764">One Network To Segment Them All: A General, Lightweight System for
-  Accurate 3D Medical Image Segmentation</a>. In:
-<em>Medical Image Computing and Computer Assisted
-  Intervention (MICCAI)</em>, LNCS <vol>11765</vol>, pp. 30-38, Springer, 2019
-</div>
 
-<a name="utime"><br></a>
-
-<p>
-
-<h2>U-Time</h2>
+<h3>U-Time</h2>
 
 <a  href="https://github.com/perslev/U-Time">U-Time</a> is a fully feed-forward deep learning approach to physiological time series segmentation developed for the analysis of sleep data. U-Time is a temporal fully convolutional network based on the U-Net architecture.It maps sequential inputs of arbitrary length to sequences of class labels on a freely chosen temporal scale. This is done by implicitly classifying every individual time-point of the input signal and aggregating these classifications over fixed intervals to form the final predictions. 
 
-<p>
-Download U-Time <a  href="https://github.com/perslev/U-Time">here</a>.
 
-<h3>Paper describing the package</h3> 
-<div class=publication>
-  Mathias Perslev,
-Michael Hejselbak Jensen,
-Sune Darkner,
-Poul Jørgen Jennum, and
-Christian Igel. 
-<a href="https://arxiv.org/abs/1910.11162">U-Time: A Fully Convolutional Network for Time Series Segmentation
-  Applied to Sleep Staging</a>.
-  <em>Advances in Neural Information Processing Systems
-  (NeurIPS 2019)</em>, 2019
-  </div>
-  
 
 
 
@@ -120,7 +91,7 @@ Michela Antonelli, Annika Reinke, Spyridon Bakas, Keyvan Farahani,
   Mathias Perslev, Akshay Pai, Jon Runhaar, Christian
 Igel, and Erik B. Dam. <a href="https://doi.org/10.1002/jmri.27978">Cross-Cohort Automatic Knee MRI Segmentation with
   Multi-Planar U-Nets</a>. <em>Journal of Magnetic Resonance
-      Imaging</em>, 2022
+      Imaging</em>, <vol>5</vol>:1650–16632022
     </div>
 
     <div class=publication>
